[project]
name = "algorithm"
version = "0.1.0"
description = "This repository contains implementations of various algorithms, primarily focused on optimization and pathfinding problems."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "notebook>=7.5.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
]
